podinfo/ingressroute-podinfo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo.${dns_domain}
  namespace: podinfo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`podinfo.${dns_domain}`)
      kind: Rule
      services:
        - name: podinfo
          kind: Service
          port: 9898
      # middlewares:  
      #   - name: chain-public-stremio-addon
      #     namespace: traefik
    - match: Host(`podinfo-cloudflare.${dns_domain}`)
      kind: Rule
      services:
        - name: podinfo
          kind: Service
          port: 9898
      # middlewares:  
      #   - name: chain-public-stremio-addon
      #     namespace: traefik
    # - match: Host(`podinfo-cloudflare-ratelimit.${dns_domain}`)
    #   kind: Rule
    #   services:
    #     - name: podinfo
    #       kind: Service
    #       port: 9898
    #   middlewares:  
    #     - name: chain-public-stremio-addon-cloudflare
    #       namespace: traefik
    # - match: Host(`podinfo-ratelimit.${dns_domain}`)
    #   kind: Rule
    #   services:
    #     - name: podinfo
    #       kind: Service
    #       port: 9898
    #   middlewares:  
    #     - name: chain-public-stremio-addon
    #       namespace: traefik
